# strands-demo

./: .env.example  .gitignore  README.md  agent.py  demo.ipynb  langsmith_exporter.py  pyproject.toml
setup/: cleanup.py  config.py  datasets.py  evaluators.py  prompts.py  upload_workspace_secrets.py
